NM-4901 Fix removing video on IE11/Edge

--- a/app/frontend/stylesheets/intel/modules/_group.scss
+++ b/app/frontend/stylesheets/intel/modules/_group.scss
@@ -179,7 +179,7 @@
 
   .gallery-video {
 
-    li:hover {
+    li.active {
       .remove-video {
         display: block;
       }
